# swiftpico

./: .gitignore  Package.resolved  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
Docs/: README.md  command-reference.md  configuration.md  examples.md  external-libraries.md  getting-started.md  project-anatomy.md  troubleshooting.md
Formula/: swiftpico.rb
Sources/SwiftPicoCLI/: DependencySupport.swift  MonitorSupport.swift  SwiftPicoCLI.swift  Templates.swift  main.swift
Sources/SwiftPicoCore/: Boards.swift  BuildSupport.swift  CacheSupport.swift  DependencyCommands.swift  DependencySupport.swift  DeviceSupport.swift  DoctorSupport.swift  FlashSupport.swift  InitSupport.swift  Models.swift  MonitorCommands.swift  MonitorSupport.swift  ProcessSupport.swift  ProjectConfigurationSupport.swift  ProjectDiscoverySupport.swift  ProjectSupport.swift  SwiftPicoCommand.swift  Templates.swift  Version.swift
Tests/: cli-integration.sh  dependency-modes.sh  docs-validation.sh  fake-picotool.sh  firmware-matrix.sh  interop-fixture.sh  real-lcd-driver.sh
Tests/Fixtures/: InteropMain.swift
Tests/Fixtures/DependencyModes/: AppInterop.c  AppInterop.h  CppAdapter.cpp  dependencies.json  main.swift
Tests/Fixtures/DependencyModes/CMakeLibrary/: CMakeLists.txt  mock_cmake.c  mock_cmake.h
Tests/Fixtures/DependencyModes/CPPLibrary/: cpp_driver.cpp
Tests/Fixtures/Interop/: AppInterop.c  AppInterop.h  Callbacks.h  CppAdapter.cpp
Tests/Fixtures/RealLCD/: AppInterop.h  ST7789Adapter.c  dependencies.json  main.swift
Tests/SwiftPicoCoreTests/: CoreTests.swift
(+16 files in other folders)
